--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "crcms category",
     "type": "library",
     "license": "MIT",
-    "homepage": "https://github.com/crcms/manage",
+    "homepage": "https://github.com/crcms/category",
     "authors": [
         {
             "name": "simon",
