--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "license": "MIT",
     "type": "crcms-module",
     "require": {
-        "php":">=7.1"
+        "php":">=7.1",
+        "kalnoy/nestedset": "^4.3"
     },
 	"autoload": {
         "files": [
